# repo_template

./: .cursorignore  .gitignore  Makefile  pyproject.toml
.cursor/rules/: architecture.mdc  coding-style.mdc  configuration-and-secrets.mdc  data-processing.mdc  error-handling-and-resilience.mdc  formatting.mdc  idempotency-and-concurrency.mdc  jobs-and-pipelines.mdc  observability.mdc  project_overview.mdc  readme.mdc  testing.mdc  tooling.mdc  verification.mdc  workflow.mdc
src/repo_template/: settings.py
src/repo_template/core/: my_service.py
src/repo_template/io/: logger.py
src/repo_template/jobs/: my_job.py
tests/: __init__.py  conftest.py  test_my_service.py
