[project]
name = "repo_template"
version = "0.0.1"
authors = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
requires-python = ">=3.11, <3.12"
readme = "README.md"
maintainers = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
dependencies = [
    "ruff",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[project.urls]
Repository = "https://github.com/PedroMTQ/repo_template.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_template"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 110
lint.select = ["E",  "W",  "F",  "I", "B"]
lint.ignore=["E501", "I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]


